# sphinx-minify

./: .gitignore  ChangeLog  requirements.txt  setup.cfg  setup.py  test-requirements.txt  tox.ini  zuul.yaml
sphinx_minify/: __init__.py  sphinx_minify.py
